# kaggle-mcp-rs

./: .env.example  Cargo.toml  README.md  TODO.md  run_tests.sh  test_auth.sh  test_server_tools.sh  test_simple.sh
examples/: README.md  basic_auth.rs  competitions_list.rs  run_example.sh
src/: lib.rs  main.rs  server.rs  test_utils.rs
src/client/: mod.rs  tests.rs
src/models/: auth.rs  competition.rs  config.rs  dataset.rs  error.rs  kernel.rs  mod.rs  model.rs  tests.rs
src/server/: tests.rs
src/tools/: auth.rs  mod.rs
