[package]
name = "kaggle-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Rust implementation of the Kaggle MCP (Model Context Protocol) server for Claude AI integration"
documentation = "https://docs.rs/kaggle-mcp-rs"
repository = "https://github.com/yourusername/kaggle-mcp-rs"
license = "MIT"
readme = "README.md"
keywords = ["kaggle", "mcp", "claude", "ai", "api"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
rmcp = { version = "0.1", features = ["transport-io"] }
rmcp-macros = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
schemars = "0.8"
dotenv = "0.15"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.10"
serial_test = "3.1"
